# electronics_network

./: README.md  env.sample  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
network/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_customsuser_telegram_id.py
